// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportHeader /> should render ReportHeader with info 1`] = `
<div>
  <styled.div>
    <styled.div>
      <h3>
         I am header 
      </h3>
    </styled.div>
    <styled.div
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <styled.span />
      <InfoIcon />
    </styled.div>
  </styled.div>
</div>
`;

exports[`<ReportHeader /> should render ReportHeader with info 2`] = `
<div>
  <styled.div>
    <styled.div>
      <h3>
         I am header 
      </h3>
    </styled.div>
    <styled.div
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <styled.span />
      <InfoIcon />
    </styled.div>
  </styled.div>
  <styled.div>
    <ReportInfo
      description="I am helper text"
      textColor="#262D33"
    />
  </styled.div>
</div>
`;

exports[`<ReportHeader /> should render ReportHeader without info 1`] = `
<div>
  <styled.div>
    <styled.div>
      <h3>
         I am header 
      </h3>
    </styled.div>
  </styled.div>
</div>
`;

exports[`<ReportHeader /> should render ReportHeader without info 2`] = `
<div>
  <styled.div>
    <styled.div>
      <h3>
         I am header 
      </h3>
    </styled.div>
  </styled.div>
</div>
`;
